UI updates: - Group sections on index page into collapsable headers - Index page respects color scheme - Notes always visible and at top of answer section - Add 'n' shortcut key to focus notes box - Flag correct answer when answer is shown
Fix mastery not being saved bug

--- a/static/css/tutorme.css
+++ b/static/css/tutorme.css
@@ -22,14 +22,18 @@ div#main {
 	border-right: 5px solid black;
 	border-bottom: 5px solid black;
 }
-div#notes.affix {
-	top: 10px;
-}
-div#notes p {
-	margin-bottom: 0px;
+div#notes-editor {
+	margin: 3px 10px;
 }
 div#qchoices {
 	padding-left: 20px;
+}
+input.qchoice {
+    margin-left: 22px;
+}
+span.qchoiceflag {
+    width: 22px;
+    margin-right: -22px;
 }
 div.editor {
 	width: 100%;
